# schooling-api

./: Cargo.toml
migrations/: 20230124170749_create_user.down.sql  20230124170749_create_user.up.sql  20230124180313_school.down.sql  20230124180313_school.up.sql
src/: main.rs
src/api/: auth.rs  mod.rs  school.rs
src/model/: school.rs  user.rs
