[package]
name = "schooling-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
uuid = { version = "1.2.2", features = ["v4"] }
